--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="https://kit.fontawesome.com/2cd63c9772.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-gray-800 shadow-md">
+<body class="bg-gray-800">
+    <nav class="bg-gray-900 shadow-md">
         <div class="max-w-7xl px-4 sm:px-6 lg:px-8 ">
             <div class="flex items-center h-16">
                 <div class="flex items-center justify-between w-full">
@@ -44,6 +44,13 @@
             </div>
         </div>
     </nav>
+
+    <main>
+        <section id="home">
+            <p>Olá, meu nome é </p>
+            <h1>Gabriel Lira</h1>
+        </section>
+    </main>
 
 </body>
 </html>
