--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/imgs/favicon-32x32.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="assets/js/index.js" defer></script>
@@ -47,8 +50,9 @@
 
     <main>
         <section id="home">
-            <p>Olá, meu nome é </p>
-            <h1>Gabriel Lira</h1>
+            <p class="text-white font-mono font-semibold">Olá, meu nome é </p>
+            <h1 class="text-gray-300 font-bold font-sans">Gabriel Lira</h1>
+            <h1 class="text-gray-400 font-bold font-sans">Desenvolvedor Front-end</h1>
         </section>
     </main>
 
