--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <div class="ml-10 flex items-baseline space-x-4 text-white">
                             <a href="#aboutme" class="hover:bg-gray-700 transition duration-150 ease-in-out text-white px-3 py-2 rounded-md text-sm font-medium">Sobre mim</a>
                             <a href="#projects" class="hover:bg-gray-700 transition duration-150 ease-in-out text-white px-3 py-2 rounded-md text-sm font-medium">Projetos</a>
-                            <a href="#services" class="hover:bg-gray-700 transition duration-150 ease-in-out text-white px-3 py-2 rounded-md text-sm font-medium">Serviços</a>
                             <a href="#my-skills" class="hover:bg-gray-700 transition duration-150 ease-in-out text-white px-3 py-2 rounded-md text-sm font-medium">Minhas Skills</a>
+                            <a href="#contacts" class="hover:bg-gray-700 transition duration-150 ease-in-out text-white px-3 py-2 rounded-md text-sm font-medium">Contatos</a>
                         </div>
                     </div>
                 </div>
@@ -42,14 +42,15 @@
             <div class="px-2 pt-2 pd-3 sm:px-3 flex flex-col items-center devide-y devide-solid divide-gray-50">
                 <a href="#aboutme" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Sobre mim</a>
                 <a href="#projects" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Projetos</a>
-                <a href="#services" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Serviços</a>
                 <a href="#my-skills" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Minhas Skills</a>
+                <a href="#contacts" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Contatos</a>
+                
             </div>
         </div>
     </nav>
 
     <main>
-        <section id="home">
+        <section id="aboutme">
             <p class="text-white font-mono font-semibold">Olá, meu nome é </p>
             <h1 class="text-gray-300 font-bold font-sans">Gabriel Lira</h1>
             <h1 class="text-gray-400 font-bold font-sans">Desenvolvedor Front-end</h1>
