--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-800">
-    <nav class="bg-gray-900 shadow-md">
+    <nav class="bg-gray-800">
         <div class="max-w-7xl px-4 sm:px-6 lg:px-8 ">
             <div class="flex items-center h-16">
                 <div class="flex items-center justify-between w-full">
@@ -51,9 +51,15 @@
 
     <main>
         <section id="aboutme">
-            <p class="text-white font-mono font-semibold">Olá, meu nome é </p>
-            <h1 class="text-gray-300 font-bold font-sans">Gabriel Lira</h1>
-            <h1 class="text-gray-400 font-bold font-sans">Desenvolvedor Front-end</h1>
+            <div class="w-full">
+                <p class="text-white font-mono font-medium text-3xl">Olá, meu nome é </p>
+                <h1 class="text-gray-300 font-bold font-sans text-5xl">Gabriel Lira.</h1>
+                <h1 class="text-gray-400 font-bold font-sans text-5xl">Desenvolvedor Front-end.</h1>
+            </div>
+            <div>
+                <p>Tenho grande interesse em ingressar no mercado de trabalho da programação como desenvolvedor 
+                    principalmente na área de Front-end, tenho conhecimento em HTML, CSS, JavaScript e React</p>
+            </div>
         </section>
     </main>
 
