--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="assets/js/index.js" defer></script>
     <script src="https://kit.fontawesome.com/2cd63c9772.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Portfólio - Gabriel Lira</title>
 </head>
 <body class="bg-gray-800">
     <nav class="bg-gray-800">
