--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="bg-gray-800">
     <nav class="bg-gray-800">
-        <div class="max-w-7xl px-4 sm:px-6 lg:px-8 ">
+        <div class="w-full px-4 sm:px-6 lg:px-8">
             <div class="flex items-center h-16">
                 <div class="flex items-center justify-between w-full">
                     <a href="" class="flex-shrink-0">
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <div id="menu" class=" hidden md:hidden">
+        <div id="menu" class=" hidden md:hidden bg-cover">
             <div class="px-2 pt-2 pd-3 sm:px-3 flex flex-col items-center devide-y devide-solid divide-gray-50">
                 <a href="#aboutme" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Sobre mim</a>
                 <a href="#projects" class="hover:bg-gray-700 text-white px-3 py-2 rounded-md text-base font-medium transition duration-150 ease-in-out">Projetos</a>
@@ -50,15 +50,18 @@
     </nav>
 
     <main>
-        <section id="aboutme">
-            <div class="w-full">
-                <p class="text-white font-mono font-medium text-3xl">Olá, meu nome é </p>
-                <h1 class="text-gray-300 font-bold font-sans text-5xl">Gabriel Lira.</h1>
-                <h1 class="text-gray-400 font-bold font-sans text-5xl">Desenvolvedor Front-end.</h1>
-            </div>
-            <div>
-                <p>Tenho grande interesse em ingressar no mercado de trabalho da programação como desenvolvedor 
-                    principalmente na área de Front-end, tenho conhecimento em HTML, CSS, JavaScript e React</p>
+        <section id="aboutme" class="h-screen flex items-center justify-center">
+            <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center gap-4">
+                <div>
+                    <p class="text-white font-mono sm:text-2xl md:text-2xl lg:text-3xl">Olá, meu nome é </p>
+                    <h1 class="text-gray-300 font-bold font-sans text-3xl sm:text-5xl md:text-6xl lg:text-7xl">Gabriel Lira.</h1>
+                    <h1 class="text-gray-400 font-bold font-sans text-3xl sm:text-5xl md:text-6xl lg:text-7xl">Desenvolvedor Front-end.</h1>
+                </div>
+                <div class="mt-4 flex flex-col items-center justify-center">
+                    <p class="text-sm sm:text-base md:text-lg lg:text-xl text-gray-400 lg:ml-48 lg:w-7/12 sm:w-full">Tenho grande interesse em ingressar no mercado de trabalho da programação como desenvolvedor
+                        principalmente na área de Front-end, tenho conhecimento em HTML, CSS, JavaScript e React</p>
+                    <button class="hover:bg-gray-700 m-20 p-2 text-gray-50 rounded-md border drop-shadow-xl">Baixar CV</button>
+                </div>
             </div>
         </section>
     </main>
