--- a/index.html
+++ b/index.html
@@ -50,17 +50,27 @@
     </nav>
 
     <main>
-        <section id="aboutme" class="h-screen flex items-center justify-center">
+        <section class="h-screen flex items-center justify-center">
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center gap-4">
-                <div>
+                <div class="animation-pulse">
                     <p class="text-white font-mono sm:text-2xl md:text-2xl lg:text-3xl">Olá, meu nome é </p>
                     <h1 class="text-gray-300 font-bold font-sans text-3xl sm:text-5xl md:text-6xl lg:text-7xl">Gabriel Lira.</h1>
-                    <h1 class="text-gray-400 font-bold font-sans text-3xl sm:text-5xl md:text-6xl lg:text-7xl">Desenvolvedor Front-end.</h1>
+                    <h1 class="text-gray-400 font-bold font-sans text-3xl sm:text-5xl md:text-6xl lg:text-7xl">Desenvolvedor Front-End.</h1>
                 </div>
-                <div class="mt-4 flex flex-col items-center justify-center">
-                    <p class="text-sm sm:text-base md:text-lg lg:text-xl text-gray-400 lg:ml-48 lg:w-7/12 sm:w-full">Tenho grande interesse em ingressar no mercado de trabalho da programação como desenvolvedor
-                        principalmente na área de Front-end, tenho conhecimento em HTML, CSS, JavaScript e React</p>
-                    <button class="hover:bg-gray-700 m-20 p-2 text-gray-50 rounded-md border drop-shadow-xl">Baixar CV</button>
+                <div class="mt-4 flex items-center gap-10
+                 justify-center">
+                    <button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl">Baixar CV</button>
+                    <button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl">Entrar em contato</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
+                <div>
+                    <div id="aboutme" class="flex flex-col items-center justify-center gap-10">
+                        <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl">Sobre mim</h1>
+                        <p class="text-gray-400 font-mono text-1xl">Desenvolvedor Front-end com experiência em HTML, CSS, Tailwind, Javascript e React. Apaixonado pelo desenvolvimento de componentes reutilizáveis. Também possui experiência em projetos gerenciados por Metodologias Ágeis. Cursando ciêcia da computação pela Faculdade Única.</p>
+                    </div>
                 </div>
             </div>
         </section>
