--- a/index.html
+++ b/index.html
@@ -59,17 +59,20 @@
                 </div>
                 <div class="mt-4 flex items-center gap-10
                  justify-center">
-                    <button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl">Baixar CV</button>
-                    <button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl">Entrar em contato</button>
+                    <button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl ">Baixar CV</button>
+                    <a href="mailto:gxavierlira@gmail.com" target="_blank"><button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl animate-pulse">Entrar em contato</button></a>
                 </div>
             </div>
         </section>
         <section>
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
                 <div>
-                    <div id="aboutme" class="flex flex-col items-center justify-center gap-10">
+                    <div id="aboutme" class="flex flex-col items-center justify-center gap-20">
                         <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl">Sobre mim</h1>
-                        <p class="text-gray-400 font-mono text-1xl">Desenvolvedor Front-end com experiência em HTML, CSS, Tailwind, Javascript e React. Apaixonado pelo desenvolvimento de componentes reutilizáveis. Também possui experiência em projetos gerenciados por Metodologias Ágeis. Cursando ciêcia da computação pela Faculdade Única.</p>
+                        <div class="w-full flex flex-col gap-1 items-center justify-center text-justify lg:flex-row lg:justify-around">
+                        <a href="https://github.com/GLira4k" target="_blank"><img src="assets/imgs/user-photo.jpg" alt="user-photo" class="rounded-full w-48 md:w-60 lg:w-80 drop-shadow-xl cursor-pointer hover:scale-110 transition duration-150 ease-in-out"></a>
+                        <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-5">Desenvolvedor Front-end com experiência em HTML, CSS, Tailwind, Javascript e React. Apaixonado pelo desenvolvimento de componentes reutilizáveis. Também possui experiência em projetos gerenciados por Metodologias Ágeis. Cursando ciêcia da computação pela Faculdade Única.</p>
+                    </div>
                     </div>
                 </div>
             </div>
