--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="mt-4 flex items-center gap-10
                  justify-center">
-                    <button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl ">Baixar CV</button>
+                    <a href="assets/pdfs/cv-gabriel-lira.pdf" target="_blank"><button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl ">Baixar CV</button></a>
                     <a href="mailto:gxavierlira@gmail.com" target="_blank"><button class="transition ease-in-out duration-150 hover:bg-gray-700 mt-20 p-2 text-gray-50 rounded-md border drop-shadow-xl animate-pulse">Entrar em contato</button></a>
                 </div>
             </div>
@@ -73,6 +73,18 @@
                         <a href="https://github.com/GLira4k" target="_blank"><img src="assets/imgs/user-photo.jpg" alt="user-photo" class="rounded-full w-48 md:w-60 lg:w-80 drop-shadow-xl cursor-pointer hover:scale-110 transition duration-150 ease-in-out"></a>
                         <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-5">Desenvolvedor Front-end com experiência em HTML, CSS, Tailwind, Javascript e React. Apaixonado pelo desenvolvimento de componentes reutilizáveis. Também possui experiência em projetos gerenciados por Metodologias Ágeis. Cursando ciêcia da computação pela Faculdade Única.</p>
                     </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <div class="rounded-xl shadow-lg">
+                        <div class="rounded-xl overflow-hidden">
+                            <img src="assets/imgs/" alt="">
+                        </div>
+                        
                     </div>
                 </div>
             </div>
