--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="w-full px-4 sm:px-6 lg:px-8">
             <div class="flex items-center h-16">
                 <div class="flex items-center justify-between w-full">
-                    <a href="" class="flex-shrink-0">
+                    <a href="#home" class="flex-shrink-0">
                         <img src="assets/imgs/gl-icon2.png" alt="logo" class=" h-12 w-12">
                     </a>
                     <div class="hidden md:block">
@@ -50,7 +50,7 @@
     </nav>
 
     <main>
-        <section class="h-screen flex items-center justify-center">
+        <section id="home" class="h-screen flex items-center justify-center">
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center gap-4">
                 <div class="animation-pulse">
                     <p class="text-white font-mono sm:text-2xl md:text-2xl lg:text-3xl">Olá, meu nome é </p>
@@ -70,21 +70,46 @@
                     <div id="aboutme" class="flex flex-col items-center justify-center gap-20">
                         <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl">Sobre mim</h1>
                         <div class="w-full flex flex-col gap-1 items-center justify-center text-justify lg:flex-row lg:justify-around">
-                        <a href="https://github.com/GLira4k" target="_blank"><img src="assets/imgs/user-photo.jpg" alt="user-photo" class="rounded-full w-48 md:w-60 lg:w-80 drop-shadow-xl cursor-pointer hover:scale-110 transition duration-150 ease-in-out"></a>
+                        <a href="https://github.com/GLira4k" target="_blank"><img src="assets/imgs/user-photo.jpg" alt="user-photo" class="rounded-full w-48 md:w-60 lg:w-80 shadow-lg cursor-pointer hover:-translate-y-2 hover:shadow-2xl hover:shadow-gray-900 transition duration-150 ease-in-out"></a>
                         <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-5">Desenvolvedor Front-end com experiência em HTML, CSS, Tailwind, Javascript e React. Apaixonado pelo desenvolvimento de componentes reutilizáveis. Também possui experiência em projetos gerenciados por Metodologias Ágeis. Cursando ciêcia da computação pela Faculdade Única.</p>
                     </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section>
+        <section id="projects">
+            <h1>meus projetos</h1>
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-                    <div class="rounded-xl shadow-lg">
-                        <div class="rounded-xl overflow-hidden">
-                            <img src="assets/imgs/" alt="">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
+                    <div class="rounded-2xl shadow-lg bg-white m-10">
+                        <div class="p-4 flex flex-col items-center">
+                            <div class="rounded-2xl overflow-hidden">
+                                <img src="assets/imgs/user-photo.jpg" alt="">
+                            </div>
+                            <h5 class="text-2xl md:text-3xl font-medium mt-3">QR Generator</h5>
+                            <p class="text-slate-500 text-lg mt-3">Gerador de QR Code feito com React.</p>
+                            <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
                         </div>
-                        
+                    </div>
+                    <div class="rounded-2xl shadow-lg bg-white m-10">
+                        <div class="p-4 flex flex-col items-center">
+                            <div class="rounded-2xl overflow-hidden">
+                                <img src="assets/imgs/user-photo.jpg" alt="">
+                            </div>
+                            <h5 class="text-2xl md:text-3xl font-medium mt-3">QR Generator</h5>
+                            <p class="text-slate-500 text-lg mt-3">Gerador de QR Code feito com React.</p>
+                            <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
+                        </div>
+                    </div>
+                    <div class="rounded-2xl shadow-lg bg-white m-10">
+                        <div class="p-4 flex flex-col items-center">
+                            <div class="rounded-2xl overflow-hidden">
+                                <img src="assets/imgs/user-photo.jpg" alt="">
+                            </div>
+                            <h5 class="text-2xl md:text-3xl font-medium mt-3">QR Generator</h5>
+                            <p class="text-slate-500 text-lg mt-3">Gerador de QR Code feito com React.</p>
+                            <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
+                        </div>
                     </div>
                 </div>
             </div>
