--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <section id="projects">
             <h1>meus projetos</h1>
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
-                    <div class="rounded-2xl shadow-lg bg-white m-10">
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80 hover:-translate-y-1 transition duration-150">
                         <div class="p-4 flex flex-col items-center">
                             <div class="rounded-2xl overflow-hidden">
                                 <img src="assets/imgs/user-photo.jpg" alt="">
@@ -91,7 +91,7 @@
                             <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
                         </div>
                     </div>
-                    <div class="rounded-2xl shadow-lg bg-white m-10">
+                    <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80">
                         <div class="p-4 flex flex-col items-center">
                             <div class="rounded-2xl overflow-hidden">
                                 <img src="assets/imgs/user-photo.jpg" alt="">
@@ -101,7 +101,7 @@
                             <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
                         </div>
                     </div>
-                    <div class="rounded-2xl shadow-lg bg-white m-10">
+                    <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80">
                         <div class="p-4 flex flex-col items-center">
                             <div class="rounded-2xl overflow-hidden">
                                 <img src="assets/imgs/user-photo.jpg" alt="">
