--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </section>
         <section id="projects" class="flex flex-col items-center justify-center my-40">
-            <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl m-10">Meus Projetos</h1>
+            <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl my-16">Meus Projetos</h1>
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
                     <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80 hover:-translate-y-1 hover:shadow-2xl hover:shadow-gray-900 transition duration-150 ease-in-out">
