--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Portfólio - Gabriel Lira</title>
 </head>
 <body class="bg-gray-800">
+    <!--Header, Navegação-->
     <nav class="bg-gray-800">
         <div class="w-full px-4 sm:px-6 lg:px-8">
             <div class="flex items-center h-16">
@@ -29,7 +30,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="mr-2 flex md:hidden">
                     <button id="menu-button" type="button" class="inline-flex items-center justify-center p-2 rounded-md text-white hover:text-gray-50 hover:bg-gray-700 focus:bg-gray-700 focus:text-gray-50 transition duration-150 ease-in-out" aria-label="Menu" aria-expanded="false">
                         <i class="fa-solid fa-bars"></i>
@@ -48,8 +48,8 @@
             </div>
         </div>
     </nav>
-
     <main>
+        <!--Página inicial-->
         <section id="home" class="h-screen flex items-center justify-center">
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center gap-4">
                 <div class="animation-pulse">
@@ -64,6 +64,7 @@
                 </div>
             </div>
         </section>
+        <!--Sobre mim-->
         <section>
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
                 <div>
@@ -77,10 +78,12 @@
                 </div>
             </div>
         </section>
+        <!--Meus projetos-->
         <section id="projects" class="flex flex-col items-center justify-center my-40">
             <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl my-16">Meus Projetos</h1>
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center">
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                    <!--Card 1-->
                     <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80 hover:-translate-y-1 hover:shadow-2xl hover:shadow-gray-900 transition duration-150 ease-in-out">
                         <div class="p-4 flex flex-col items-center">
                             <div class="rounded-2xl overflow-hidden">
@@ -91,6 +94,7 @@
                             <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
                         </div>
                     </div>
+                    <!--Card 2-->
                     <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80 hover:-translate-y-1 hover:shadow-2xl hover:shadow-gray-900 transition duration-150 ease-in-out">
                         <div class="p-4 flex flex-col items-center">
                             <div class="rounded-2xl overflow-hidden">
@@ -101,6 +105,7 @@
                             <a href="https://qrcode-generator-glira4k.vercel.app/" target="_blank"><button class="bg-gray-300 m-3 p-3 rounded-xl font-semibold hover:bg-gray-400 hover:shadow-md transition duration-150 ">Saiba Mais</button></a>
                         </div>
                     </div>
+                    <!--Card 3-->
                     <div class="rounded-2xl shadow-lg bg-gray-100 m-10 md:w-72 lg:w-80 hover:-translate-y-1 hover:shadow-2xl hover:shadow-gray-900 transition duration-150 ease-in-out">
                         <div class="p-4 flex flex-col items-center">
                             <div class="rounded-2xl overflow-hidden">
@@ -114,6 +119,17 @@
                 </div>
             </div>
         </section>
+        <!--Minhas Skills-->
+        <section id="my-skills" class="flex flex-col items-center justify-center my-40">
+            <div>
+                <div>
+                    <div>
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+        
     </main>
 
 </body>
