--- a/index.html
+++ b/index.html
@@ -122,9 +122,27 @@
         <!--Minhas Skills-->
         <section id="my-skills" class="flex flex-col items-center justify-center my-40">
             <div>
-                <div>
-                    <div>
-                        
+                <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <i class="fa-brands fa-html5 text-8xl"></i>
+                    </div>
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <i class="fa-brands fa-css3-alt text-8xl"></i>
+                    </div>
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <img src="assets/imgs/tailwind-css.svg" alt="tailwind-logo" class="text-black">
+                    </div>
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <i class="fa-brands fa-js text-8xl"></i>
+                    </div>
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <i class="fa-brands fa-react text-8xl"></i>
+                    </div>
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <i class="fa-brands fa-git-alt text-8xl"></i>
+                    </div>
+                    <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                        <i class="fa-brands fa-github text-8xl"></i>
                     </div>
                 </div>
             </div>
