--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
         </section>
         <!--Minhas Skills-->
         <section id="my-skills" class="flex flex-col items-center justify-center my-40">
-            <div>
+            <div class="w-full px-4 sm:px-7 lg:px-8 flex flex-col items-center justify-center">
+                <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl my-16">Meus Projetos</h1>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
                         <i class="fa-brands fa-html5 text-8xl"></i>
