--- a/index.html
+++ b/index.html
@@ -125,25 +125,25 @@
                 <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl my-16">Minhas Skills</h1>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <i class="fa-brands fa-html5 text-8xl"></i>
+                        <abbr title="HTML5"><i class="fa-brands fa-html5 text-8xl"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <i class="fa-brands fa-css3-alt text-8xl"></i>
+                        <abbr title="CSS3"><i class="fa-brands fa-css3-alt text-8xl"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <img src="assets/imgs/tailwind-css.svg" alt="tailwind-logo" class="text-black">
+                        <abbr title="Tailwind CSS"><img src="assets/imgs/tailwind-css.svg" alt="tailwind-logo" class="text-black"></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <i class="fa-brands fa-js text-8xl"></i>
+                        <abbr title="Javascript"><i class="fa-brands fa-js text-8xl"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <i class="fa-brands fa-react text-8xl"></i>
+                        <abbr title="ReactJS"><i class="fa-brands fa-react text-8xl"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <i class="fa-brands fa-git-alt text-8xl"></i>
+                        <abbr title="Git"><i class="fa-brands fa-git-alt text-8xl"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <i class="fa-brands fa-github text-8xl"></i>
+                        <abbr title="Github"><i class="fa-brands fa-github text-8xl"></i></abbr>
                     </div>
                 </div>
             </div>
