--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <abbr title="CSS3"><i class="fa-brands fa-css3-alt text-8xl"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
-                        <abbr title="Tailwind CSS"><img src="assets/imgs/tailwind-css.svg" alt="tailwind-logo" class="text-black"></abbr>
+                        <abbr title="Tailwind CSS"><i><img src="assets/imgs/tailwind-css.svg" alt="tailwind-logo" class="text-black"></i></abbr>
                     </div>
                     <div class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
                         <abbr title="Javascript"><i class="fa-brands fa-js text-8xl"></i></abbr>
