--- a/index.html
+++ b/index.html
@@ -152,25 +152,25 @@
         <section>
             <div class="w-full px-4 sm:px-7 lg:px-8 flex items-center justify-center">
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-                    <div class="flex flex-col items-center justify-center ">
+                    <div class="flex flex-col items-center justify-center m-3">
                         <div class="flex items-center justify-center bg-gray-200 w-14 h-14 rounded-full">
                             <i class="fa-regular fa-envelope text-3xl"></i>
                         </div>
                         <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-2">gxavierlira@gmail.com</p>
                     </div>
-                    <div class="flex flex-col items-center justify-center ">
+                    <div class="flex flex-col items-center justify-center m-3">
                         <div class="flex items-center justify-center bg-gray-200 w-14 h-14 rounded-full">
                             <i class="fa-solid fa-phone text-3xl"></i>
                         </div>
                         <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-2">(31) 9 8853-6798</p>
                     </div>
-                    <div class="flex flex-col items-center justify-center ">
+                    <div class="flex flex-col items-center justify-center m-3">
                         <div class="flex items-center justify-center bg-gray-200 w-14 h-14 rounded-full">
                             <i class="fa-brands fa-linkedin-in text-3xl"></i>
                         </div>
                         <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-2">@gabriel-lira</p>
                     </div>
-                    <div class="flex flex-col items-center justify-center ">
+                    <div class="flex flex-col items-center justify-center m-3">
                         <div class="flex items-center justify-center bg-gray-200 w-14 h-14 rounded-full">
                             <i class="fa-brands fa-github text-3xl"></i>
                         </div>
