--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             <div class="w-full px-4 sm:px-7 lg:px-8 flex flex-col items-center justify-center">
                 <h1 class="text-white font-sans font-bold sm:text-2xl md:text-2xl lg:text-3xl my-24">Contatos</h1>
                 <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+                    <!--Email-->
                     <a href="mailto:gxavierlira@gmail.com" target="_blank">
                         <div class="flex flex-col items-center justify-center m-3">
                             <div
@@ -214,6 +215,7 @@
                             </div>
                         </div>
                     </a>
+                    <!--Linkedin-->
                     <a href="https://www.linkedin.com/in/gabriel-lira-02823a238/" target="_blank">
                         <div class="flex flex-col items-center justify-center m-3">
                             <div
@@ -224,6 +226,7 @@
                             <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-2">@gabriel-lira</p>
                         </div>
                     </a>
+                    <!--Telefone-->
                     <div class="flex flex-col items-center justify-center m-3">
                         <div
                             class="flex items-center justify-center bg-gray-200 hover:bg-gray-300 trasition duration-150 w-14 h-14 rounded-full">
@@ -232,6 +235,7 @@
                         <h5 class="text-gray-300 font-bold m-2">Telefone</h5>
                         <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-2">(31) 98853-6798</p>
                     </div>
+                    <!--Github-->
                     <a href="https://github.com/GLira4k" target="_blank">
                         <div class="flex flex-col items-center justify-center m-3">
                             <div
