--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="bg-gray-800 aos-init">
     <!--Header, Navegação-->
-    <nav id="navigation" class="bg-gray-800 fixed w-full px-4 sm:px-6 lg:px-8">
+    <nav id="home" class="bg-gray-800 w-full px-4 sm:px-6 lg:px-8">
         <div class="w-full px-4 sm:px-6 lg:px-8">
             <div class="flex items-center h-16">
                 <div class="flex items-center justify-between w-full">
@@ -248,6 +248,13 @@
                     </a>
                 </div>
         </section>
+        <aside class="flex justify-end m-10 aos">
+            <a href="#home">
+                <div class="flex items-center justify-center bg-gray-200 hover:bg-gray-300 trasition duration-150 w-12 h-12 rounded-full">
+                    <i class="fa-solid fa-arrow-up text-3xl text-gray-700"></i>
+                </div>
+            </a>
+        </aside>
     </main>
 </body>
 
