--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
+        <script src="
+        https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js
+        "></script>
     <link rel="shortcut icon" href="assets/imgs/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="assets/js/index.js" defer></script>
-    <script src="https://kit.fontawesome.com/2cd63c9772.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2cd63c9772.js" 
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfólio - Gabriel Lira</title>
 </head>
 
@@ -68,7 +73,7 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main id="particles-js">
         <!--Página inicial-->
         <section id="home" class="h-screen flex items-center justify-center">
             <div class="w-full px-4 sm:px-6 lg:px-8 flex flex-col items-center justify-center gap-4">
