--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body class="bg-gray-800 aos-init">
+    <div id="particles-js" class="w-full h-full fixed top-0 left-0 z-[-1]"></div>
     <!--Header, Navegação-->
     <nav id="home" class="bg-gray-800 w-full px-4 sm:px-6 lg:px-8">
         <div class="w-full px-4 sm:px-6 lg:px-8">
