--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
                         class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
                         <abbr title="Github"><i class="fa-brands fa-github text-8xl"></i></abbr>
                     </div>
+                    <div
+                    class="bg-gray-200 w-32 h-32 flex items-center justify-center rounded-xl shadow-md hover:-translate-y-1 hover:shadow-2xl transition duration-150 ease-in-out m-5">
+                    <abbr title="C#"><i><img src="assets/imgs/csharp-logo.svg" alt="csharp-logo"
+                                class="text-black"></i></abbr>
+                    </div>
                 </div>
             </div>
         </section>
