--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     alt="user-photo"
                                     class="rounded-full w-48 md:w-60 lg:w-80 shadow-lg cursor-pointer hover:-translate-y-2 hover:shadow-2xl hover:shadow-gray-900 transition duration-150 ease-in-out"></a>
                             <p class="text-gray-400 font-mono text-1xl lg:w-3/5 m-5">Desenvolvedor Front-end com
-                                experiência em HTML, CSS, Tailwind, Javascript e React. Apaixonado pelo
+                                experiência em HTML, CSS, Tailwind, Javascript, React, Java e C#. Apaixonado pelo
                                 desenvolvimento
                                 de componentes reutilizáveis. Também possui experiência em projetos gerenciados por
                                 Metodologias Ágeis. Cursando ciêcia da computação pela Faculdade Única.</p>
